force-app/main/default/objects/TaskAutomation__mdt/TaskAutomation__mdt.object-meta.xml
<CustomObject>
    <label>Automação de Task</label>
    <pluralLabel>Automações de Tasks</pluralLabel>
</CustomObject>