force-app/main/default/objects/TaskAutomation__mdt/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <label>Tipo de Ação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FieldAutomation</fullName>
                <default>true</default>
                <label>Automação de Campo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>