force-app/main/default/objects/TaskAutomation__mdt/fields/AutomationField__c.field-meta.xml
<CustomField>
    <fullName>AutomationField__c</fullName>
    <label>Campo de Automação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>