force-app/main/default/objects/TaskAutomation__mdt/fields/TaskIdentifier__c.field-meta.xml
<CustomField>
    <fullName>TaskIdentifier__c</fullName>
    <label>Identificador da Tarefa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>