force-app/main/default/objects/TaskAutomation__mdt/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Tipo de Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
                <default>true</default>
                <label>Reparo</label>
            </value>
            <value>
                <fullName>Termination</fullName>
                <label>Rescisão</label>
            </value>
            <value>
                <fullName>Retention</fullName>
                <label>Retenção</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>